notas: update comment value add
